Fix icon alignment (see screenshots)
The mis-alignment was probably caused by the bootstrap upgrade.

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -2509,7 +2509,6 @@ div.gallery-item h4.asset_title {
 
 .actions {
     float: right;
-    margin: -4px -6px 0 0;
 }
 
 .actions a {
